component demo updated

--- a/component/public/index.html
+++ b/component/public/index.html
@@ -4,6 +4,14 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" href="<%= BASE_URL %>resources/images/favicon.ico">
 	<title><%= htmlWebpackPlugin.options.title %></title>
+	<style>
+		body, html {
+			font-family: Arial, Helvetica, sans-serif;
+			background: #2c3531;
+			padding: 1rem;
+			margin: 0;
+		}
+	</style>
 </head>
 <body>
 	<noscript>
