--- a/component/public/index.html
+++ b/component/public/index.html
@@ -2,7 +2,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>resources/images/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ba45a">
+	<meta name="msapplication-TileColor" content="#6ba45a">
+	<meta name="theme-color" content="#ffffff">
 	<title><%= htmlWebpackPlugin.options.title %></title>
 	<style>
 		body, html {
