lowercase login and trim

--- a/component/public/index.html
+++ b/component/public/index.html
@@ -6,9 +6,9 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ba45a">
-	<meta name="msapplication-TileColor" content="#6ba45a">
-	<meta name="theme-color" content="#ffffff">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#404040">
+	<meta name="msapplication-TileColor" content="#404040">
+	<meta name="theme-color" content="#404040">
 	<title><%= htmlWebpackPlugin.options.title %></title>
 	<style>
 		body, html {
