--- a/component/public/index.html
+++ b/component/public/index.html
@@ -9,7 +9,7 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#404040">
 	<meta name="msapplication-TileColor" content="#404040">
 	<meta name="theme-color" content="#404040">
-	<title><%= htmlWebpackPlugin.options.title %></title>
+	<title>Extream Collaboration</title>
 	<style>
 		body, html {
 			font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<noscript>
-		<strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+		<strong>We're sorry but Extream Collaboration doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
 
 	<div id="app"></div>
